--- a/rethink.css
+++ b/rethink.css
@@ -9,6 +9,12 @@
     --font-size-small: 11px;
 }
 
+
+::selection {
+    background-color: purple;
+    color: white;
+}
+
 html, body{
     padding: 0;
     margin: 0;
@@ -61,12 +67,27 @@ img{
     max-width: 100%;
 }
 
+h2{
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+}
+
+/* Code */
+pre{
+    background-color: #EEE;
+    padding: 5px;
+    border-radius: 2px;
+}
 
 /* Responsive content positioning */
 @media only screen and (min-width: 750px) /* Large screens */
 {
     .outline-3{
         margin: 2vh 10vw;
+    }
+
+    .outline-text-2{
+        padding: 2vh 10vw;
     }
 
 }
@@ -76,12 +97,17 @@ img{
     .outline-3{
         margin: 2vh 2vw;
     }
+
+    .outline-text-2{
+        padding: 2vh 2vw;
+    }
 }
 
 
 blockquote{
-    border-left:5px solid #444;
+    border-left: 3px solid purple;
     padding-left: 10px;
+		font-style: italic;
 }
 
 
@@ -91,4 +117,60 @@ p, pre, ol, ul, table, code{
 
 h1, h2, h3, h4, h5, h6{
     color: #222;
+}
+
+.tag{
+    margin-top: 5px;
+    display: block;
+    color: white;
+    font-size: var(--font-size-small);
+}
+
+.tag > span{
+		font-family: "Courier New", monospace;
+    font-size: var(--font-size-small);
+    background-color: purple;
+    text-transform: uppercase;
+    border-radius: 2px;
+    width: fit-content;
+    height: auto;
+    padding: 1px 5px;
+    margin: 1px;
+}
+/* Stripe table */
+tr:nth-child(even) {
+  background-color: #EEE;
+}
+
+.title{
+   padding: 2vh 5vw;
+}
+
+pre{
+		font-family: "Courier New", monospace;
+    font-size: var(--font-size-small)
+}
+
+.org-org-meta-line{
+    color: purple;
+}
+
+.org-keyword{
+    color: purple;
+}
+
+a{
+    color: purple;
+}
+
+.underline{
+    text-decoration: underline;
+}
+
+.todo{
+    color: #790604;
+}
+
+.done{
+    color: purple;
 }
