--- a/rethink.css
+++ b/rethink.css
@@ -17,19 +17,15 @@
 html, body{
     padding: 0;
     margin: 0;
+    background-color: #fdfdfd;
 }
 
-h2{
-    padding-top: 0.5em;
-    padding-bottom: 5vh;
-}
+/* Header margin */
+h2{margin-top: 2rem; margin-bottom: 1.5rem;}
+h3{margin-top: 1rem; margin-bottom: 1rem;}
+h4{margin-top: 1rem; margin-bottom: 1rem;}
 
 /* ------------------------- */
-
-p{
-    text-align: justify;
-}
-
 
 ::selection {
     background-color: purple;
@@ -58,8 +54,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-.outline-2 > h2{
+.outline-2 > h2, #table-of-contents > h2{
     text-align: center;
+}
+
+/* Table of contents */
+#table-of-contents ul{
+    list-style-type:none;
+    margin: 0;
+}
+
+
+#table-of-contents .tag{
+    display: none;
 }
 
 .outline-3{
@@ -83,10 +90,10 @@ img{
 
 /* Code */
 pre{
-    margin: 1em;
+    margin: 1rem;
     background-color: #EEE;
-    padding: 5px;
-    border-radius: 2px;
+    padding: 0.5rem;
+    border-radius: 0.2rem;
     font-size: var(--font-size-small) !important;
 }
 
@@ -100,11 +107,11 @@ pre{
 @media only screen and (min-width: 750px) /* Large screens */
 {
     .outline-3{
-        margin: 2vh 10vw;
+        margin: 0vh 10vw;
     }
 
-    .outline-text-2{
-        padding: 2vh 10vw;
+    .outline-text-2, #table-of-contents{
+        padding: 0vh 10vw;
     }
 
 }
@@ -112,40 +119,46 @@ pre{
 @media only screen and (max-width: 750px) /* Small screens */
 {
     .outline-3{
-        margin: 2vh 5vw;
+        margin: 0vh 5vw;
         display: block;
     }
 
-    .outline-text-2{
-        padding: 2vh 5vw;
+    .outline-text-2, #table-of-contents{
+        padding: 0vh 5vw;
     }
 }
 
 
 blockquote{
-    border-left: 3px solid purple;
-    padding-left: 10px;
+    border-left: 0.2rem solid purple;
+    padding-left: 1rem;
 		font-style: italic;
 }
 
 
 p, pre, ol, ul, table, code{
-    color: #444;
+    color: #1A1A1A;
+}
+
+table, blockquote, pre, ol, ul, p, #postamble{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 h1, h2, h3, h4, h5, h6{
-    color: #222;
+    color: #0A0A0A;
 }
 
 .tag{
-    margin-top: 5px;
+    margin-top: 0.5rem;
     display: block;
     color: white;
     font-size: var(--font-size-xsmall);
 }
 
 .tag > span{
-		font-family: "Courier New", monospace;
+		font-weight: 400;
+    font-size: 0.6rem;
     background-color: purple;
     text-transform: uppercase;
     border-radius: 2px;
@@ -185,19 +198,13 @@ a{
 }
 
 .todo{
-    color: #790604;
+    color: #7D161A;
 		font-weight: 400;
 }
 
 .done{
     color: purple;
 		font-weight: 400;
-}
-
-/* Responsive code blocks and tables */
-pre, .outline-text-2, .outline-text-3, outline-text-4{
-    max-width: 100%;
-    overflow-x: auto;
 }
 
 /* Postamble */
